--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,21 @@
 Package: icus.data
 Title: Datasets related to the International Conferences on the Unity of Science
-Version: 0.0.1
+Version: 0.4.1
 Authors@R: 
     person("Alan", "Engel", , "alan@ttcrossroads.net", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0003-0070-2347YOUR-ORCID-ID"))
+           comment = c(ORCID = "0000-0003-0070-2347"))
 Description: Provides datasets created for researching the ICUS series of 22
-    conferences that werre held between 1972 and 2000.
+    conferences that Sun Myung Moon's organizations held between 1972 and 2000.
 License: use_ccby_license()
 Encoding: UTF-8
+LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-DataVersion: 0.0.5
-Date: 2023-07-28
-Import: data.table, dplyr, googlesheets4
+DataVersion: 0.4.1
+Date: 2023-09-26
+Import: data.table, dplyr, googlesheets4,readxl
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    R.rsp
 VignetteBuilder: knitr
