--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,10 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-DataVersion: 0.9.0
+DataVersion: 0.9.1
 Date: 2024-01-31
-Import: data.table, dplyr, googlesheets4,readxl,RefManageR
+Import: data.table, dplyr, googlesheets4,readxl
+Depends: RefManageR
 Suggests: 
     knitr,
     rmarkdown,
