--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,8 @@ email: alan@ttcrossroads.net
 # url: "https://kijinosu.github.io/icus.data/"
 # baseurl: "docs"
 description: An R data package for researching the International Conferences on the Unity of Science
-theme: jekyll-theme-minimal
+# theme: jekyll-theme-minimal
+theme: minima
 navbar:
   - title: Search Examples
     path: /search-examples.html
