--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ email: alan@ttcrossroads.net
 # url: "https://kijinosu.github.io/icus.data/"
 # baseurl: "docs"
 description: An R data package for researching the International Conferences on the Unity of Science
-theme: jekyll-theme-minimal
+theme: jekyll-theme-leap-day
 # theme: minima
 markdown: kramdown
 navbar:
