--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,9 +1,9 @@
-title: icus.data data package for R
+# title: icus.data data package for R
 email: alan@ttcrossroads.net
 # url: "https://kijinosu.github.io/icus.data/"
 # baseurl: "docs"
 description: An R data package for researching the International Conferences on the Unity of Science
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-minima
 # theme: minima
 markdown: kramdown
 navbar:
