--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,11 +1,11 @@
-title: icus.data data package for R
+title: icus.data
 email: alan@ttcrossroads.net
 # url: "https://kijinosu.github.io/icus.data/"
 # baseurl: "docs"
 description: An R data package for researching the International Conferences on the Unity of Science
 # theme: jekyll-theme-minimal
 theme: minima
-markdown: kramdown
+# markdown: kramdown
 navbar:
   - title: Search Examples
     path: /search-examples.md
