--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: icus.data
 Title: Datasets related to the International Conferences on the Unity of Science
-Version: 0.8.2
+Version: 0.8.3
 Authors@R: 
     person("Alan", "Engel", , "alan@ttcrossroads.net", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-0070-2347"))
@@ -12,9 +12,9 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 DataVersion: 0.9.2
-Date: 2024-02-02
+Date: 2024-02-06
 Import: data.table, dplyr, googlesheets4,readxl
-Depends: RefManageR
+Depends: RefManageR, stringi
 Suggests: 
     knitr,
     rmarkdown,
