--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,31 @@
 Package: icus.data
 Title: Datasets related to the International Conferences on the Unity of Science
-Version: 0.8.3
+Version: 1.0.0
 Authors@R: 
-    person("Alan", "Engel", , "alan@ttcrossroads.net", role = c("aut", "cre"),
+    person("Alan", "Engel", , email = "alan@ttcrossroads.net", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-0070-2347"))
-Description: Provides datasets created for researching the ICUS series of 22
+Description: Provides datasets and R functions created for researching the ICUS series of 22
     conferences that Sun Myung Moon's organizations held between 1972 and 2000.
 License: use_ccby_license()
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-DataVersion: 0.9.2
-Date: 2024-02-06
-Import: data.table, dplyr, googlesheets4,readxl
+DataVersion: 1.0.0
+Date: 2024-03-27
+URL: https://github.com/kijinosu/icus.data
+BugReports: https://github.com/kijinosu/icus.data/issues
+Imports: 
+    tidyr,
+    viafr,
+    crul,
+    data.table, 
+    dplyr, 
+    googlesheets4,
+    readxl
 Depends: RefManageR, stringi
 Suggests: 
+    testthat (>= 2.1.0),
     knitr,
     rmarkdown,
     R.rsp,
